# real_time_crypto

./: .gitignore  README.md  redpanda.yml
docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml  redpanda.yml
services/price_predictor/: Dockerfile  Makefile  comet.credentials.env.sample  hopsworks.credentials.env.sample  pyproject.toml
services/price_predictor/src/: config.py  feature_engineering.py  hopsworks_api.py  model_registry.py  ohlc_data_reader.py  prediction.py  price_predictor.py  training.py  utils.py
services/price_predictor/src/models/: current_price_baseline.py  moving_average_baseline.py  xgboost_model.py
services/topic_to_feature_store/: Dockerfile  Makefile  historical.dev.env  historical.prod.env  live.prod.env  pyproject.toml
services/topic_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade_producer/: Dockerfile  Makefile  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  prod.env  pyproject.toml
services/trade_producer/src/: config.py  kraken_websocket_api.py  main.py
services/trade_producer/src/trade_data_source/: base.py  kraken_rest_api.py  kraken_websocket_api.py
services/trade_to_ohlc/: Dockerfile  Makefile  dev.env  historical.prod.env  live.prod.env  prod.env  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
