[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["davidrtfraser <david.rt.fraser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
quixstreams = "^2.11.1"
loguru = "^0.7.2"
hopsworks = "^4.1.0"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
