[tool.poetry]
name = "trade_producer"
version = "0.1.0"
description = ""
authors = ["davidrtfraser <david.rt.fraser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quixstreams = "^2.11.1"
loguru = "^0.7.2"
websocket-client = "^1.8.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
